<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".RegistrationActivity">

    <!-- Title text -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="Create Your Account"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumberEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        android:minHeight="48dp"
        android:autofillHints=""
        android:inputType="textPersonName"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButton"
        android:layout_marginTop="22dp"
        android:layout_centerHorizontal="true"
        android:onClick="goToLogin"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:layout_marginStart="6dp"
        android:text="@string/or" />



</RelativeLayout>
