<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    tools:context=".home">

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#808080"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="152dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/home" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/notification"
                android:onClick="openNewFragment"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/todo" />
        </LinearLayout>

    </LinearLayout>

    <!-- Credit Card Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="316dp"
        android:layout_height="465dp"
        android:layout_marginTop="-50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/photo" />

    <TextView
        android:id="@+id/balanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_format"
        android:textSize="30sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
        android:layout_marginTop="-280dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"/>
    <!-- Logout ImageButton -->
    <ImageButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout" />

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
